-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, jfx11, jfx17, jfx21, jfx22
-
Component/s: javafx
-
b09
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8316292 | jfx21.0.2 | Jayathirth D V | P3 | Resolved | Fixed | b01 |
| JDK-8316238 | 8u401 | Jayathirth D V | P3 | Resolved | Fixed | b01 |
At multiple places in native glass code we don't have appropriate NULL checks which might result in null pointer access.
Add appropriate checks.
Add appropriate checks.
- backported by
-
JDK-8316238 Possible null pointer access in native glass
-
- Resolved
-
-
JDK-8316292 Possible null pointer access in native glass
-
- Resolved
-
- blocks
-
JDK-8316020 ☂ Check memory allocation for null return value
-
- Open
-
- links to
-
Commit
openjdk/jfx21u/c80b74a2
-
Commit
openjdk/jfx/f7b21e54
-
Review
openjdk/jfx21u/15
-
Review
openjdk/jfx/1223
(2 links to)