8315074: Possible null pointer access in native glass

Reviewed-by: jvos, kcr